syntax = "proto3";
import "PubKeyExchange.proto";
import "CipherPayload.proto";

package ecliptix.proto.app_device;
option csharp_namespace = "Grpc.Services";

service AppDeviceServiceActions {
  rpc EstablishAppDeviceEphemeralConnect(PubKeyExchange) returns (PubKeyExchange);
  rpc RegisterDeviceAppIfNotExist(CipherPayload) returns (CipherPayload);
}
